DBC22-5302: fixed buttons being covered with an alert in iOS

--- a/src/frontend/src/Components/report/ReportMap.scss
+++ b/src/frontend/src/Components/report/ReportMap.scss
@@ -2,6 +2,9 @@
 @import '~ol/ol.css';
 
 .report-page {
+  .ol-viewport {
+    z-index: 0;
+  }
 
   @media (max-width: 767px) {
     display: flex;
@@ -240,7 +243,7 @@
             align-items: center;
             margin-right: 8px;
             font-size: 0.75rem;
-            
+
             svg {
               color: $BC-Blue;
               margin-right: 0;
@@ -439,40 +442,40 @@
         padding: 0.75rem;
         border-radius: 8px;
         box-shadow: 0px 6.4px 14.4px 0px rgba(0, 0, 0, 0.13), 0px 1.2px 3.6px 0px rgba(0, 0, 0, 0.10);
-    
+
         &__row {
           display: flex;
-    
+
           & + .data-card__row {
             margin-top: 0.75rem;
             padding-top: 0.75rem;
             border-top: 1px solid $Divider;
           }
-    
+
           .data-icon {
             margin-right: 0.75rem;
             color: $Grey80;
           }
-    
+
           .data-group {
             flex: 1 0;
-    
+
             &__row {
               display: flex;
             }
           }
         }
-    
+
         .label, .data {
           font-size: 0.875rem;
           margin-bottom: 0;
         }
-    
+
         .label {
           text-align: left;
           color: $Grey80;
         }
-    
+
         .data {
           text-align: right;
           margin-left: auto;
@@ -513,7 +516,7 @@
     right: 0;
     z-index: 1001;
     height: 100%;
-    
+
     .drawer-drag-handle {
       position: absolute;
       width: 100%;
@@ -576,7 +579,7 @@
     &:focus, &:focus-visible {
       outline: none;
       box-shadow: none;
-    }    
+    }
   }
 
   .panel-content {
